GuiUtils: replace `new URL()` with `URI.create().toURL()`
As of Java 20, `new URL()` is deprecated.